--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,6 @@
 numpy
+# install the bioen "manylinux" package that includes all dependencies in binary form
 --extra-index-url https://gitlab.mpcdf.mpg.de/api/v4/projects/2155/packages/pypi/simple
 bioen
+# add h+- directly from github
+git+https://github.com/bio-phys/hplusminus
