--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
 numpy
+mpmath
 # install the bioen "manylinux" package that includes all dependencies in binary form
 --extra-index-url https://gitlab.mpcdf.mpg.de/api/v4/projects/2155/packages/pypi/simple
 bioen
