--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,11 @@
 numpy
 mpmath
+
 # install the bioen "manylinux" package that includes all dependencies in binary form
---extra-index-url https://gitlab.mpcdf.mpg.de/api/v4/projects/2155/packages/pypi/simple
+#--extra-index-url https://gitlab.mpcdf.mpg.de/api/v4/projects/2155/packages/pypi/simple
+
+# natively from pypi
 bioen
+
 # add h+- directly from github
 git+https://github.com/bio-phys/hplusminus
