--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,11 +1,12 @@
 pages:
-    image: image: gitlab-registry.mpcdf.mpg.de/mpcdf/documentation/docs-ci:20210626
+    # The pandoc tool is readily available with the Docker image used to generate the MPCDF docs, so we just use that ...
+    image: gitlab-registry.mpcdf.mpg.de/mpcdf/documentation/docs-ci:20210626
     tags:
         - docker
     script:
         - pushd .binder_landing_page
         - pandoc --metadata pagetitle="SAXS BioEn" -c pandoc.css -s index.md -o index.html
-        - popd ..
+        - popd
         - cp .binder_landing_page/* public
     artifacts:
         paths:
