--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -7,6 +7,7 @@ pages:
         - pushd .binder_landing_page
         - pandoc --metadata pagetitle="SAXS BioEn" -c pandoc.css -s index.md -o index.html
         - popd
+        - mkdir public
         - cp .binder_landing_page/* public
     artifacts:
         paths:
