fix entrypoint for pandoc image.

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,5 +1,7 @@
 pages:
-    image: pandoc/core
+    image:
+      name: pandoc/core
+      entrypoint: [""]
     tags:
         - docker
     script:
